--- a/cis_harden.yml
+++ b/cis_harden.yml
@@ -1,5 +1,6 @@
 ---
-- hosts: all
+- name: Pre-create Domain
+  hosts: windows
   gather_facts: true
   tasks:
     - name: Create new domain in a new forest on the target host and reboot
@@ -8,9 +9,8 @@
         safe_mode_password: password123!
         reboot: true
 
-- hosts: all  # noqa: name[play]
-
+- name: Begin Hardening CIS 2
+  hosts: windows
   gather_facts: true
-
   roles:
-      - role: cis_harden
+    - role: cis_harden
