--- a/roles/cis_harden/defaults/main.yml
+++ b/roles/cis_harden/defaults/main.yml
@@ -46,7 +46,7 @@ win2019cis_cert_auth_role: false
 win2019cis_WINS_server: false
 win2019_use_domain_firewall: false
 win2019_use_private_firewall: false
-win2019_use_public_firewall: false
+win2019_use_public_firewall: true
 
 # Section 1 Account Policies
 # 1.1.x Password Policy, 1.2.x Account Lockout Policy
@@ -617,11 +617,11 @@ win19cis_exchange_server_running: false
 
 # 2.3.1.5
 # win19cis_admin_username is the name the administrator account will be renamed to
-win19cis_admin_username: adminchangethis
+win19cis_admin_username: Administrator
 
 # 2.3.1.6
 # win19cis_guest_username is the name the guest account will be renamed to
-win19cis_guest_username: guestchangethis
+win19cis_guest_username: AWSGuest
 
 # 2.3.6.5
 # win19cis_domain_member_maximum_password_age is the policy setting determines the maximum allowable age for a
