--- a/roles/cis_harden/handlers/main.yml
+++ b/roles/cis_harden/handlers/main.yml
@@ -1,5 +1,5 @@
 ---
 
-- name: reboot_windows
-  ansible.windows.win_reboot:
-      reboot_timeout: 3600
+#- name: reboot_windows
+#  ansible.windows.win_reboot:
+#      reboot_timeout: 3600
